feat: finish refresh token and login endpoint for the api
